--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,12 @@
-after_container_restart.ipynb
-checkpoints/
 dataset_ready_to_use/
 Dockerfile
-Experiment_FCD_crop_fine_tune_folded-Copy1.ipynb
-Experiment_FCD_crop_fine_tune.ipynb
-Experiment_FCD_crop.ipynb
-Experiment_grey_matter_pretraining.ipynb
-Inference-Copy1.ipynb
 interpolate/
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
-labels/
-metrics/
-pkl_results/
-predictions/
-Preprocessing.ipynb
 raw_data/
 requirements.txt
-results/
-test.npy
-tmp/
 */__pycache__/*
 experiments/
+radiologist/
+analysis/
+examples_of_work/
